package maidsafe.nfs.protobuf;
option optimize_for = LITE_RUNTIME;

message DataMessage {
  message Source {
    required int32 persona = 1;
    required bytes node_id = 2;
  }
  message Data {
    required int32 type = 1;
    required bytes name = 2;
    optional bytes content = 3;
    optional int32 version = 4;
  }
  required bytes message_id = 1;
  required int32 action = 2;
  required int32 destination_persona = 3;
  required Source source = 4;
  required Data data = 5;
  optional bytes data_holder_hint = 6;
}
